# YOLOv8-TensorRT-CPP

./: .all-contributorsrc  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: main.yml
Demo/: CMakeLists.txt  benchmark.cpp  cmd_line_util.h  object_detection_image.cpp  object_detection_video_stream.cpp
YOLOv8_TensorRT_CPP/: CMakeLists.txt
YOLOv8_TensorRT_CPP/include/: yolov8.h
YOLOv8_TensorRT_CPP/src/: yolov8.cpp
images/: .gitignore
models/: .gitignore
scripts/: pytorch2onnx.py
src/: benchmark.cpp  cmd_line_util.h  main.cpp  object_detection_camera_stream.cpp  object_detection_image.cpp  object_detection_video_stream.cpp  yolov8.cpp  yolov8.h
